--- a/Lab-3/app/django_project/templates/index.html
+++ b/Lab-3/app/django_project/templates/index.html
@@ -1,18 +1,64 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-        <title>Aplicaciones de Internet</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href='{% static "css/bootstrap.min.css" %}' type="text/css" />
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    </head>
+    <title>Aplicaciones de Internet</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href='{% static "css/bootstrap.min.css" %}' type="text/css" />
+    <link rel="stylesheet" href='{% static "css/index.css" %}' type="text/css" />
+    <!-- Agregamos tu archivo CSS personalizado -->
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+
 <body>
     <div class="container">
-        <div class="row">
-            <img src="{% static 'images/userena.svg' %}" class="rounded" style="width:200px"/>
+        <div class="row text-center">
+            <img src="{% static 'images/userena.svg' %}" class="rounded" style="max-width: 200px;" id="logo-image" />
             <h1>Aplicaciones de Internet</h1>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 id="asignaturas-heading">Lista de Asignaturas</h2>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center flex-nowrap">
+            <div class="row">
+                <div class="card-group">
+                    {% for asignatura in asignaturas %}
+                    <div class="mb-3">
+                        <div class="card text-center border-primary h-100" style="width: 18rem;">
+                            <div class="card-header">
+                                <h5 class="card-title" id="asignatura-link-{{ asignatura.id }}">{{ asignatura.nombre }}
+                                </h5>
+                            </div>
+                            <div class="card-body">
+                                <a href="{% url 'detalle_asignatura' asignatura.id %}"
+                                    id="asignatura-link-{{ asignatura.id }}" class="btn btn-warning">Ver asignatura</a>
+                                <p class="card-text mb-2 text-body-secondary">Código Asignatura: {{ asignatura.codigo }}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    {% empty %}
+                    <li>No hay asignaturas disponibles.</li>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 text-center">
+            <!-- Botón de Bootstrap para ir a gestionar_asignaturas -->
+            <a href="{% url 'gestionar_asignaturas' %}" class="btn btn-primary" id="gestionar-btn">Gestionar
+                Asignaturas</a>
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
