--- a/Lab-5/app/django_project/templates/index.html
+++ b/Lab-5/app/django_project/templates/index.html
@@ -6,6 +6,22 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href='{% static "css/bootstrap.min.css" %}' type="text/css" />
         <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+        <script type="text/javascript">
+            function load_file(){
+                $.ajax({
+                  url: 'https://apis.digital.gob.cl/fl/feriados/2013',
+                  headers: {"Access-Control-Allow-Origin": "*"},
+                  type: 'GET',
+                  success : function(response) {
+                    console.log('test');
+                  },
+                cache: false,
+                processData: false,
+                contentType: false,
+                });
+              }
+        </script>
     </head>
 <body>
     <div class="container">
@@ -13,19 +29,24 @@
             <img src="{% static 'images/userena.svg' %}" class="rounded" style="width:200px"/>
             <h1>Aplicaciones de Internet</h1>
             <h3>Feriados Legales</h3>
+            <form action="">
+                <select name="years" id="years" onchange="load_file()">
+                    
+                        <option value=""></option>
+                    
+                </select>
+            </form>
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <tr>
                         <td>Nombre</td>
-                        <td>Fecha</td>
-                        <td>Irrenunciable</td>
-                        <td>Tipo</td>
-                        <td>Leyes</td>
+                        <td>Descripción</td>
+                        <td>Imagen</td>
+                        <td>detalles</td>
                     </tr>
                 </thead>
                 <tbody>
                         <tr>                   
-                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
